update: file dir

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "animate-your-text",
-  "homepage": "https://animate-your-text.github.io/MM2024demo",
+  "homepage": "https://animate-your-text.github.io/demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
