--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "antd": "^5.16.1",
     "d3": "^7.9.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "wasm-imagemagick": "^1.2.8"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
