--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "animate-your-text",
-  "homepage": "https://animate-your-text.github.io/demo",
+  "name": "animate-your-word",
+  "homepage": "https://animate-your-word.github.io/demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,10 +13,13 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "antd": "^5.16.1",
     "d3": "^7.9.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
